# java-enet-jni

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.gradle  build.sh  gradle.properties  settings.gradle
.cursor/rules/: rules.mdc
enet/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  enet.sln  enet.vcxproj  enet.vcxproj.filters
src/main/cpp/: op_legends_enet_ENetLibrary.cpp
src/main/java/op/legends/enet/: ENetLibrary.java
src/test/java/op/legends/enet/: ENetTest.java
